# simple_sfml

./: Ball.cpp  Ball.h  CMakeLists.txt  Player.cpp  Player.h  README.md  check.cpp  main.cpp
